Fixed spacing to be consistent

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -454,7 +454,7 @@ header {
 .skill-l {
     height: 100px;
     padding-top: 38px;
-    font-size: 18px;
+    font-size: 17px;
     background-color: #3C4148;
 }
 
